# filewatch

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  FileWatch.hpp  README.md  build.sh
.github/workflows/: cmake.yml
example/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  CatchMain.cpp  Test.cpp
tests/Util/: TestHelper.hpp
tests/catch/: catch.hpp
tests/filesystem/: CMakeLists.txt  Test.cpp
tests/string/: CMakeLists.txt  Test.cpp
